--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 /* Styles for the body */
 
 body {
-	font-family: "Open Sans";
+	font-family: "Arial";
 	color: #202030;
 	background-color: #f8f8fc;
 }
