--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,12 @@
 
 /* Import declaration to use Google Fonts - check https://fonts.google.com/ for details */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* Styles for the body */
 
 body {
-	font-family: "Arial";
+	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #202030;
 	background-color: #f8f8fc;
 }
@@ -14,6 +15,12 @@ body {
 h1 {
 	color: #43436f
 }
+
+.kanit-light {
+	font-family: "Kanit", sans-serif;
+	font-weight: 300;
+	font-style: normal;
+  }
 
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
