--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 body {
 	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #202030;
-	background-color: #f8f8fc;
+	background-color: #b5ceea;
 }
 
 h1 {
